Added: Sentiment Model first draft.

--- a/notebooks/sentiment_model.ipynb
+++ b/notebooks/sentiment_model.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stopwords = set(stopwords.words('portuguese') + list(punctuation) + ['AT_USER','URL'])\n",
+    "stopwords = set(stopwords.words('portuguese') + list(punctuation))\n",
     "\n",
     "# Function to clean Portuguese text and tokenize it\n",
     "def preProcessing(text):\n",
