Added Experiment 2 - vaderSentiment

--- a/notebooks/sentiment_model.ipynb
+++ b/notebooks/sentiment_model.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -67,38 +67,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>hoje o meu obrigado vai para o excelente trabalho que os jornalistas estao a fazer durante este problema da covid19 na televisao na radio nos jornais no online todos tem contribuido ficaemcasa covid19 coronavirus obrigado visuais upsideup portugal</td>\n",
+       "      <td>As minhas #corridas deste fim de semana. . #CoronaVirus #FiqueEmCasa . . . Weekend's #running . #Covid19 #StayAtHome . em Lisboa, Portugal - União Européia https://www.instagram.com/p/B-48rybgCX9/?igshid=17eovdprflw5t</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>seguimos firmes na quarentena se nos estamos conseguindo voce tambem dara conta de ficar em casa sossega o facho quarentena sossegaofacho coronavirus em quarentena</td>\n",
+       "      <td>O que andam falando de Portugal por aí... #coronavirus #covid19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>coronavirus tracou ano de 2020 sem nenhuma oposicao</td>\n",
+       "      <td>Boraaaa!! #2020 #covid19 #fiqueemcasa #coronavirus #stopcovid19 #uniao #life #lifestyle #cadadiaimporta em Portugal https://www.instagram.com/p/B-ww1XzBmwA/?igshid=2g75c01a86sw</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>a imagem impressionante do telao do aeroporto de lisboa ontem apenas 32 partidas 3 para o brasil em um painel que comporta 125 voos coronavirus coronavirusportugal coronaviruspt covid19</td>\n",
+       "      <td>Eis a Quinta-feira Santa 2020! Uma Semana Santa abençoada e com saúde! #semanasanta2020 #obrigada #instagood #holyweek #covid19 #coronavirus ##lifestyle #thanksgod #pic em Portugal https://www.instagram.com/p/B-wfSzrhFggjl6aYcmcqLEIaNUQaoWyNvrd01s0/?igshid=bxkym3lhgtse</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>nao estou muito preocupado com o coronavirus ja peguei coisa muito pior e ainda chamei de amor</td>\n",
+       "      <td>A minhas #corrida deste fim de semana. . #CoronaVirus #FiqueEmCasa . . . Weekend's #running . #Covid19 #StayAtHome . em Lisboa, Portugal - União Européia https://www.instagram.com/p/B-ne200glbQ/?igshid=rwo925z0xr31</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                                                                                                                                                                                                      text\n",
-       "0  hoje o meu obrigado vai para o excelente trabalho que os jornalistas estao a fazer durante este problema da covid19 na televisao na radio nos jornais no online todos tem contribuido ficaemcasa covid19 coronavirus obrigado visuais upsideup portugal\n",
-       "1                                                                                     seguimos firmes na quarentena se nos estamos conseguindo voce tambem dara conta de ficar em casa sossega o facho quarentena sossegaofacho coronavirus em quarentena \n",
-       "2                                                                                                                                                                                                     coronavirus tracou ano de 2020 sem nenhuma oposicao \n",
-       "3                                                               a imagem impressionante do telao do aeroporto de lisboa ontem apenas 32 partidas 3 para o brasil em um painel que comporta 125 voos coronavirus coronavirusportugal coronaviruspt covid19 \n",
-       "4                                                                                                                                                           nao estou muito preocupado com o coronavirus ja peguei coisa muito pior e ainda chamei de amor"
+       "                                                                                                                                                                                                                                                                            text\n",
+       "0                                                      As minhas #corridas deste fim de semana. . #CoronaVirus #FiqueEmCasa . . . Weekend's #running . #Covid19 #StayAtHome . em Lisboa, Portugal - União Européia https://www.instagram.com/p/B-48rybgCX9/?igshid=17eovdprflw5t\n",
+       "1                                                                                                                                                                                                               O que andam falando de Portugal por aí... #coronavirus #covid19 \n",
+       "2                                                                                               Boraaaa!! #2020 #covid19 #fiqueemcasa #coronavirus #stopcovid19 #uniao #life #lifestyle #cadadiaimporta em Portugal https://www.instagram.com/p/B-ww1XzBmwA/?igshid=2g75c01a86sw\n",
+       "3  Eis a Quinta-feira Santa 2020! Uma Semana Santa abençoada e com saúde! #semanasanta2020 #obrigada #instagood #holyweek #covid19 #coronavirus ##lifestyle #thanksgod #pic em Portugal https://www.instagram.com/p/B-wfSzrhFggjl6aYcmcqLEIaNUQaoWyNvrd01s0/?igshid=bxkym3lhgtse\n",
+       "4                                                         A minhas #corrida deste fim de semana. . #CoronaVirus #FiqueEmCasa . . . Weekend's #running . #Covid19 #StayAtHome . em Lisboa, Portugal - União Européia https://www.instagram.com/p/B-ne200glbQ/?igshid=rwo925z0xr31"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
