--- a/notebooks/news_analysis.ipynb
+++ b/notebooks/news_analysis.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.1. Python imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -14,41 +28,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 70,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /home/ruijpbastos/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/ruijpbastos/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "## 1.2. NLTK downloads"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Only run if needed, on new environment, or if the files have been deleted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#nltk.download('punkt')\n",
     "#nltk.download('stopwords')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Data setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.1. Get data from csv"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,16 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_publico = pd.read_csv(publico_path, index_col='Unnamed: 0')"
+    "df_publico = pd.read_csv(publico_path, index_col='Unnamed: 0') #index_col = \"Unnamed: 0\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,18 +94,18 @@
        "(8849, 5)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_publico.shape"
+    "df_publico.shape #22/07/2020 -> (8849, 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -95,67 +114,49 @@
        "Index(['Data', 'Titulo', 'Descricao', 'Rubrica', 'URL'], dtype='object')"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_publico.columns"
+    "df_publico.columns #22/07/2020 -> ['Data', 'Titulo', 'Descricao', 'Rubrica', 'URL']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2. Rearrange columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_cols = df_publico['Data'].str.split('T', expand = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#split data column into day and hour columns\n",
+    "temp_cols = df_publico['Data'].str.split('T', expand = True)\n",
+    "\n",
     "df_publico['Dia'] = temp_cols[0]\n",
     "df_publico['Hora'] = temp_cols[1]\n",
-    "#df_publico.drop(columns='Data', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp_cols = df_publico['Dia'].str.split('-', expand = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#df_publico.drop(columns='Data', inplace=True)\n",
+    "\n",
+    "#split day column into year, month and day columns\n",
+    "temp_cols = df_publico['Dia'].str.split('-', expand = True)\n",
+    "\n",
     "df_publico['Ano'] = temp_cols[0]\n",
     "df_publico['Mes'] = temp_cols[1]\n",
-    "df_publico['Dia'] = temp_cols[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_publico['Dia'] = temp_cols[2]\n",
+    "\n",
+    "#order columns\n",
     "df_publico = df_publico[['Data','Ano', 'Mes', 'Dia', 'Hora', 'Titulo', 'Descricao', 'Rubrica', 'URL']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +286,7 @@
        "4  /2020/06/30/culturaipsilon/noticia/salas-cinem...  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,44 +296,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 111,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df_publico.index.name = id"
+    "# 3. Data preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1. Tokenize news titles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_publico_ml = pd.DataFrame()"
+    "df_publico['Titulo_tokenized'] = df_publico.apply(lambda row: nltk.word_tokenize(row['Titulo']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2. Create column with word length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_publico_ml['Titulo_tokenized'] = df_publico.apply(lambda row: nltk.word_tokenize(row['Titulo']), axis=1)"
+    "df_publico['Titulo_length'] = df_publico['Titulo_tokenized'].apply(len)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_publico_ml['Titulo_length'] = df_publico_ml['Titulo_tokenized'].apply(len)"
+    "s_publico_describe = df_publico['Titulo_length'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -349,42 +362,102 @@
        "Name: Titulo_length, dtype: float64"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_publico_ml['Titulo_length'].describe()"
+    "s_publico_describe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 22/07/2020\n",
+    "    - Uma média de 12 palavras, com um desvio padrão de 4.3, dando um intervalo de comprimento entre 8 e 16 palavras.\n",
+    "    - A média corresponde mais ou menos à mediana.\n",
+    "    - Um mínimo de comprimento de 1 palavra apenas.\n",
+    "    - Um máximo, por outro lado, de 42 palavras"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Data analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.1. Find news with min and max word length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "len_min = df_publico_ml['Titulo_length'].idxmin()\n",
-    "len_max = df_publico_ml['Titulo_length'].idxmax()"
+    "min_index = df_publico[df_publico['Titulo_length'] == s_publico_describe.loc['min']].index\n",
+    "max_index = df_publico[df_publico['Titulo_length'] == s_publico_describe.loc['max']].index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Notícias com número de palavras igual a 1.0 (min)\n",
+      "\n",
       "Desconfinacalma\n",
+      "Desconfinamedo\n",
+      "Sudoku\n",
+      "Falhei\n",
+      "Regressar\n",
+      "Mães-mãe\n",
+      "Purificação\n",
+      "PanDemocracia\n",
+      "Ilhas\n",
+      "Fuga\n",
+      "Medo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Notícias com número de palavras igual a {} (min)'.format(s_publico_describe.loc['min']))\n",
+    "print('')\n",
+    "for idx in min_index:\n",
+    "    print(df_publico.iloc[idx, 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Notícias com número de palavras igual a 42.0 (max)\n",
+      "\n",
       "Da tv para o mundo real: <i>Anatomia de Grey</i>, <i>The Good Doctor</i> ou <i>Station 19</i> doam materiais para travar o novo coronavírus\n"
      ]
     }
    ],
    "source": [
-    "print(df_publico.iloc[len_min, 5])\n",
-    "print(df_publico.iloc[len_max, 5])"
+    "print('Notícias com número de palavras igual a {} (max)'.format(s_publico_describe.loc['max']))\n",
+    "print('')\n",
+    "for idx in max_index:\n",
+    "    print(df_publico.iloc[idx, 5])"
    ]
   },
   {
