started analysis on updated data

--- a/notebooks/news_analysis.ipynb
+++ b/notebooks/news_analysis.ipynb
@@ -67,16 +67,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "publico_path = '../extra/notícias/news_sample_1to1000.csv'"
+    "publico_path = '../extra/notícias/news_sample_1to1000_updated.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,22 +85,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_publico_shape = df_publico.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8849, 5)"
+       "(9670, 42)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_publico.shape #22/07/2020 -> (8849, 5)"
+    "df_publico_shape\n",
+    "#22/07/2020 -> (8849, 5)\n",
+    "#28/07/2020 -> (9670, 42)"
    ]
   },
   {
@@ -111,7 +122,18 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Data', 'Titulo', 'Descricao', 'Rubrica', 'URL'], dtype='object')"
+       "Index(['titulo', 'descricao', 'titulo_Mobile', 'subtitulo', 'rubricTag',\n",
+       "       'rubrica', 'tipo', 'palavraChave', 'tipoLayout', 'isOpinion',\n",
+       "       'prioridade', 'isPreview', 'aoMinuto', 'isFeature', 'dataActualizacao',\n",
+       "       'data', 'autores_id', 'autores_nome', 'autores_localizacao',\n",
+       "       'autores_profissaoActual', 'autores_profissaoNaAltura',\n",
+       "       'autores_isExternal', 'autores_contribuicao', 'autores_tipo', 'tags_id',\n",
+       "       'tags_nome', 'tags_isPrincipal', 'tags_isTimeLine',\n",
+       "       'tags_forcaConteudoAberto', 'tags_isForForuns', 'tags_isUsedInForuns',\n",
+       "       'isSponsorContent', 'isClubeP', 'isItemOpinion', 'isMultipleRubric',\n",
+       "       'socialTitle', 'isLongForm', 'isHeadline', 'wordCount', 'extra4',\n",
+       "       'partners', 'props'],\n",
+       "      dtype='object')"
       ]
      },
      "execution_count": 6,
@@ -120,7 +142,60 @@
     }
    ],
    "source": [
-    "df_publico.columns #22/07/2020 -> ['Data', 'Titulo', 'Descricao', 'Rubrica', 'URL']"
+    "df_publico.columns \n",
+    "\n",
+    "#22/07/2020 -> ['Data', 'Titulo', 'Descricao', 'Rubrica', 'URL']\n",
+    "#28/07/2020 -> ['titulo', 'descricao', 'titulo_Mobile', 'subtitulo', 'rubricTag',\n",
+    "#               'rubrica', 'tipo', 'palavraChave', 'tipoLayout', 'isOpinion',\n",
+    "#               'prioridade', 'isPreview', 'aoMinuto', 'isFeature', 'dataActualizacao',\n",
+    "#               'data', 'autores_id', 'autores_nome', 'autores_localizacao',\n",
+    "#               'autores_profissaoActual', 'autores_profissaoNaAltura',\n",
+    "#               'autores_isExternal', 'autores_contribuicao', 'autores_tipo', 'tags_id',\n",
+    "#               'tags_nome', 'tags_isPrincipal', 'tags_isTimeLine',\n",
+    "#               'tags_forcaConteudoAberto', 'tags_isForForuns', 'tags_isUsedInForuns',\n",
+    "#               'isSponsorContent', 'isClubeP', 'isItemOpinion', 'isMultipleRubric',\n",
+    "#               'socialTitle', 'isLongForm', 'isHeadline', 'wordCount', 'extra4',\n",
+    "#               'partners', 'props']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_nulls = df_publico.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in df_publico:\n",
+    "    if num_nulls[col] == df_publico_shape[0]:\n",
+    "        df_publico.drop(columns=[col], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_publico.columns)"
    ]
   },
   {
