--- a/notebooks/news_analysis.ipynb
+++ b/notebooks/news_analysis.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "38"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "Name: extra4, dtype: int64"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "Name: rubrica, Length: 9670, dtype: object"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "33"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -575,13 +575,42 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_publico.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['titulo', 'descricao', 'subtitulo', 'rubrica', 'tipo', 'tipoLayout',\n",
+       "       'isOpinion', 'prioridade', 'aoMinuto', 'dataActualizacao', 'data',\n",
+       "       'autores_id', 'autores_nome', 'autores_localizacao',\n",
+       "       'autores_profissaoActual', 'autores_profissaoNaAltura',\n",
+       "       'autores_isExternal', 'autores_contribuicao', 'autores_tipo', 'tags_id',\n",
+       "       'tags_nome', 'tags_isPrincipal', 'tags_isTimeLine',\n",
+       "       'tags_forcaConteudoAberto', 'tags_isForForuns', 'tags_isUsedInForuns',\n",
+       "       'isClubeP', 'isItemOpinion', 'isMultipleRubric', 'socialTitle',\n",
+       "       'isLongForm', 'wordCount', 'extra4'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_publico.columns"
    ]
   },
   {
@@ -593,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +788,7 @@
        "[9670 rows x 5 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +864,7 @@
        "Name: title_length, dtype: float64"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -946,16 +975,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb172dfb760>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f46acd61640>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -985,16 +1014,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb173691ac0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f46abbe4340>"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1017,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1117,7 @@
        "Name: type, dtype: int64"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1253,7 @@
        "107  Decretada situação de Alerta em todo o país ex...  "
       ]
      },
-     "execution_count": 209,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,56 +1264,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-44-fd10b7f01f3d>:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_medidas_estados['data'] = pd.to_datetime(df_medidas_estados['data'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_medidas_estados['data'] = pd.to_datetime(df_medidas_estados['data'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       Linha de mil milhões para micro e pequenas emp...\n",
-       "1       Covid-19: Twitter retira vídeo e mensagens de ...\n",
-       "2       Tecnologia portuguesa elimina o novo coronavír...\n",
-       "3       “Não somos super-homens, somos humanos”: os re...\n",
-       "4       Dez milhões de euros para as instituições part...\n",
-       "                              ...                        \n",
-       "9665    É a pior altura do ano para lidar com um vírus...\n",
-       "9666    Novo coronavírus: 20 perguntas sobre o que se ...\n",
-       "9667    Número de mortes causadas pelo novo coronavíru...\n",
-       "9668    Novo vírus da pneumonia que está a afectar a C...\n",
-       "9669    Novo tipo de pneumonia na China mata pelo meno...\n",
-       "Name: titulo, Length: 9670, dtype: object"
+       "5     2019-03-13\n",
+       "18    2020-03-17\n",
+       "21    2020-03-18\n",
+       "34    2020-02-04\n",
+       "37    2020-03-04\n",
+       "47    2020-04-17\n",
+       "50    2020-03-05\n",
+       "73    2020-05-15\n",
+       "96    2020-09-06\n",
+       "107   2020-01-07\n",
+       "108   2020-01-07\n",
+       "109   2020-01-07\n",
+       "110   2020-01-07\n",
+       "111   2020-01-07\n",
+       "112   2020-01-07\n",
+       "113   2020-01-07\n",
+       "Name: data, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_publico['titulo']"
+    "df_medidas_estados['data']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "No axis named day for object type <class 'pandas.core.frame.DataFrame'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-229-01a03fb80a89>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_publico\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'month'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'day'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'titulo'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'month'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'day'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/projects/miniproject-sentimentanalysis-covid/env/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mgroupby\u001b[0;34m(self, by, axis, level, as_index, sort, group_keys, squeeze, observed)\u001b[0m\n\u001b[1;32m   5797\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlevel\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mby\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5798\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"You have to supply one of 'by' and 'level'\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5799\u001b[0;31m         \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_axis_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5800\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5801\u001b[0m         return groupby_generic.DataFrameGroupBy(\n",
-      "\u001b[0;32m~/projects/miniproject-sentimentanalysis-covid/env/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m_get_axis_number\u001b[0;34m(cls, axis)\u001b[0m\n\u001b[1;32m    405\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    406\u001b[0m                 \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 407\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"No axis named {axis} for object type {cls}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    408\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    409\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mclassmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: No axis named day for object type <class 'pandas.core.frame.DataFrame'>"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>titulo</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">01</th>\n",
+       "      <th>21</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">07</th>\n",
+       "      <th>24</th>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>190 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           titulo\n",
+       "month day        \n",
+       "01    21        2\n",
+       "      22        4\n",
+       "      23        3\n",
+       "      24        9\n",
+       "      25        5\n",
+       "...           ...\n",
+       "07    24       25\n",
+       "      25       17\n",
+       "      26       11\n",
+       "      27       34\n",
+       "      28       19\n",
+       "\n",
+       "[190 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_publico[['month', 'day', 'titulo']].groupby('month', 'day').count()"
+    "df_publico[['month', 'day', 'titulo']].groupby(['month', 'day']).count()"
    ]
   },
   {
