added news from observador in july

--- a/extra/notícias/download_noticias_observador.ipynb
+++ b/extra/notícias/download_noticias_observador.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,39 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "#insert dates here in this format: Year,M,D\n",
-    "start_date = datetime.date(2020,5,1) #news from this date\n",
-    "end_date = datetime.date(2020,6,1) #to this date\n",
+    "start_date = datetime.date(2020,2,1) #news from this date\n",
+    "end_date = datetime.date(2020,7,31) #to this date\n",
     "one_day_increment = datetime.timedelta(days=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(json_news)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +50,7 @@
     "descs = []\n",
     "links = []\n",
     "\n",
-    "for day in range((end_date - start_date).days):\n",
+    "for day in range((end_date - start_date).days+1):\n",
     "    date = start_date + day * one_day_increment\n",
     "    #change format\n",
     "    offset = date.strftime(\"%Y%m%d\")\n",
@@ -88,27 +68,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Converter listas para DataFrame\n",
-    "\n",
     "lists = list(zip(dates,titles,descs,links))\n",
     "colnames= [\"Data\",\"Titulo\",\"Desc\",\"Links\"]\n",
-    "\n",
-    "news_dataset = pd.DataFrame(lists, columns =colnames)\n",
-    "news_dataset.head()"
+    "news_dataset = pd.DataFrame(lists, columns =colnames)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(28735, 4)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "news_dataset.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "#save in csv\n",
-    "#news_dataset.to_csv(\"observador_news_june.csv\")"
+    "news_dataset.to_csv(\"noticias_observador_fev_a_julho.csv\")"
    ]
   },
   {
